--- a/app/src/main/res/drawable/selector_color_bottomnavi.xml
+++ b/app/src/main/res/drawable/selector_color_bottomnavi.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:color="#FF928A" android:state_checked="true" />
+    <item android:color="#FFE68A" android:state_checked="false" />
+
+</selector>
