그룹 검색 기능 추가 올바르지 못한 코드를 입력 시 가입 안되는거까지!
그룹 탈퇴 기능도 추가!

문제가 있다! 그룹인 상태로 게시판 들어가면 또 사람 차별하고
거꾸로 값 읽어옴.. 짱나서 걍 익명 만들어버림 ㅋㅋ

+) 그룹 만들기 기능도 추가했삼.
소소하게 에딧텍스트에 한글자도 안입력했을때 그럼안댄다구 말하는것두 했음~~

--- a/app/src/main/res/layout/activity_makegroup.xml
+++ b/app/src/main/res/layout/activity_makegroup.xml
@@ -35,7 +35,7 @@
                 android:src="@drawable/ic_star_2" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/G_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
@@ -51,7 +51,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/G_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
@@ -118,7 +118,7 @@
             android:paddingTop="30dp">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/Now"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
