그룹 검색 기능 추가 올바르지 못한 코드를 입력 시 가입 안되는거까지!
그룹 탈퇴 기능도 추가!

문제가 있다! 그룹인 상태로 게시판 들어가면 또 사람 차별하고
거꾸로 값 읽어옴.. 짱나서 걍 익명 만들어버림 ㅋㅋ

+) 그룹 만들기 기능도 추가했삼.
소소하게 에딧텍스트에 한글자도 안입력했을때 그럼안댄다구 말하는것두 했음~~

+) 자잘한거 추가

--- a/app/src/main/res/layout/activity_makegroup.xml
+++ b/app/src/main/res/layout/activity_makegroup.xml
@@ -94,7 +94,7 @@
             android:layout_marginRight="15dp"
             android:layout_weight="2.5"
             android:fontFamily="@font/nanumgothic_normal"
-            android:text="대신, 다른 별들의 얘기를 들어보려면\n이번 주제에 대해 먼저 느낀점을 등록해야해요.\n이번 주제는 홈 화면의 버튼을 누르면 볼 수 있어요!"
+            android:text="부끄럼쟁이 별들을 위해\n게시판은 익명 시스템이에요."
             android:textColor="@color/default_text"
             android:textSize="15sp" />
 
@@ -106,7 +106,7 @@
             android:layout_marginRight="15dp"
             android:layout_weight="2.5"
             android:fontFamily="@font/nanumgothic_normal"
-            android:text="그룹장이 되면 다른 별들을 관리할 수 있고,\n또 다른 별들을 무리에 들어오게 할 수 있어요!"
+            android:text="그룹장은 다른 별들을 초대할 수 있고,\n또 그룹을 탈퇴하면 그룹은 자동으로 해체되어요.....\n그러니 신중한 결정이 필요할 거에요!"
             android:textColor="@color/default_text" />
 
         <LinearLayout
