--- a/app/src/main/res/layout/activity_writing.xml
+++ b/app/src/main/res/layout/activity_writing.xml
@@ -33,11 +33,13 @@
             android:id="@+id/edit_b"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_marginLeft="13dp"
             android:layout_marginTop="2dp"
             android:layout_weight="5"
             android:background="#00FFFFFF"
             android:fontFamily="@font/nanumgothic_normal"
-            android:paddingLeft="11dp"
+            android:paddingRight="10dp"
             android:text="수정"
             android:textColor="@color/default_text"
             android:textSize="18sp"
@@ -45,7 +47,7 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="300dp"
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:src="@drawable/star_bar3" />
@@ -55,10 +57,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:layout_weight="5"
             android:background="#00FFFFFF"
             android:fontFamily="@font/nanumgothic_normal"
-            android:paddingRight="11dp"
             android:text="등록"
             android:textColor="@color/default_text"
             android:textSize="18sp"
