--- a/app/src/main/res/layout/custom_dialog_readme.xml
+++ b/app/src/main/res/layout/custom_dialog_readme.xml
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Home: 이번 주의 책과 토론주제가 주어집니다."
+                android:text="Home: 이번 주의 책과 토론주제가 주어집니다. 책제목을 누르면 자신의 의견을 적을 수 있는    화면이 뜹니다."
                 android:textColor="@color/default_text"
                 android:textColorHighlight="#FFFFFF" />
 
